// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Icon /> should render SVG that has nested \`g\` tags correctly 1`] = `
<div>
  <svg
    aria-labelledby="muted-2"
    class="base muted dark"
    data-testid="data-testid-Icon"
    focusable="false"
    height="12"
    role="img"
    style="height: 12px; width: 12px;"
    tabindex="-1"
    viewBox="8 7 12 18"
    width="12"
  >
    <title
      id="muted-2"
    >
      title
    </title>
    <g>
      <g
        transform="translate(-97.000000, -48.000000)"
      >
        <g
          transform="translate(97.000000, 48.000000)"
        >
          <g
            fill="#FFFEF2"
            transform="translate(4.000000, 6.000000)"
          >
            <g
              transform="translate(3.000000, 0.573593)"
            >
              <path
                d="M5.74011671,4.90798034 L13.5001929,12.6680565 C13.8907172,13.0585808 13.8907172,13.6917458 13.5001929,14.0822701 C13.3186245,14.2638385 13.0741693,14.368605 12.8174691,14.374866 L3.81370319,14.59447 L4.03330724,5.59070413 C4.0467736,5.03858358 4.50527237,4.60191807 5.05739292,4.61538443 C5.31409312,4.62164541 5.55854828,4.72641191 5.74011671,4.90798034 Z"
                transform="translate(9.481906, 8.926267) rotate(45.000000) translate(-9.481906, -8.926267)"
              />
              <polygon
                points="0 7.4516129 4.4516129 6.16129032 4.4516129 11.6912442 0 10.4009217"
              />
            </g>
            <path
              d="M18.353198,12.259593 C18.3633576,11.843048 18.3297871,11.4377194 18.2566733,11.0477941 C17.7619986,8.4096316 15.457178,6.47656906 12.6389123,6.54530725 C9.4041016,6.62420507 18.2743002,15.4944036 18.353198,12.259593 Z"
              transform="translate(15.142166, 9.756339) rotate(45.000000) translate(-15.142166, -9.756339)"
            />
            <rect
              height="25.5"
              rx="1"
              stroke="#858480"
              stroke-width="0.5"
              transform="translate(11.575976, 8.735040) scale(-1, 1) rotate(58.000000) translate(-11.575976, -8.735040)"
              width="2.5"
              x="10.325976"
              y="-4.01495963"
            />
          </g>
        </g>
      </g>
    </g>
  </svg>
</div>
`;

exports[`<Icon /> should render render base component correctly 1`] = `
<div>
  <svg
    aria-labelledby="rightArrow-0"
    class="base rightArrow dark"
    data-testid="data-testid-Icon"
    focusable="false"
    height="12"
    role="img"
    style="height: 12px; width: 12px;"
    tabindex="-1"
    viewBox="0 0 50 50"
    width="12"
  >
    <title
      id="rightArrow-0"
    >
      rightArrow
    </title>
    <g>
      <path
        d="M30.1,5.3L50,25.1L30.1,45h-6.6l18-17.6H0v-4.8h41.5l-18-17.6h6.6V5.3z"
      />
    </g>
  </svg>
</div>
`;
